# Number-Joining-Game

./: MANIFEST.in  Notes.txt  Procfile  build_and_test.py  render.yaml  requirements.txt  setup.cfg
src/canvas/: canvas.py  pdf_file.py  pixel.py  route.py  route_extension.py
src/canvas/data/: instructions.txt
src/config/: __init__.py  config.py  logger.py
src/config/data/: specifications.csv
src/game/: game.py
src/image/: GreyscaleImage.py  __init__.py  colour.py  rgb_image.py
src/image/data/: specifications.csv
src/numberjoiner/: Colour.py  NumberPath.py  PathConstructor.py  Point.py
src/webinterface/: manage.py
src/webinterface/fileupload/: apps.py  forms.py  utils.py  views.py
src/webinterface/fileupload/templates/: upload.html
src/webinterface/webinterface/: asgi.py  settings.py  urls.py  wsgi.py
test/: test_test.py
test/test_game/expected_output/2x2/: 1.txt  10.txt  11.txt  12.txt  13.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
test/test_game/expected_output/2x2_BLBlack/: 1.txt
test/test_game/expected_output/2x2_BLWhite/: 1.txt  2.txt  3.txt
test/test_game/expected_output/2x2_BRBlack/: 1.txt
test/test_game/expected_output/2x2_BRWhite/: 1.txt  2.txt  3.txt
test/test_game/expected_output/2x2_BWhite/: 1.txt  2.txt
test/test_game/expected_output/2x2_LWhite/: 1.txt  2.txt
test/test_game/expected_output/2x2_RWhite/: 1.txt  2.txt
test/test_game/expected_output/2x2_TLBRWhite/: 1.txt
test/test_game/expected_output/2x2_TLBlack/: 1.txt
test/test_game/expected_output/2x2_TLWhite/: 1.txt  2.txt  3.txt
test/test_game/expected_output/2x2_TRBLWhite/: 1.txt
test/test_game/expected_output/2x2_TRBlack/: 1.txt
(+6 files in other folders)
