[metadata]
name = number-joining-game
version = 1.0.0
url = https://github.com/jack0reardon/Number-Joining-Game
author = Jack Reardon
author_email = "Jack Reardon" <jack0reardon@example.com>
description = Make a picture by connecting the numbers.
# long_description = file: README.md
# long_description_content_type = text/markdown
license = CC0
license_files = LICENSE
classifiers = License :: OSI Approved :: CC0 License

[options]
package_dir =
   =src
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    Django==5.0.8
    numpy==1.26.4
    Pillow==10.4.0
    reportlab==4.2.2
    setuptools==58.1.0

[options.packages.find]
where = src
exclude = test*

[options.package_data]
image = data/*.jpg
config = data/specifications.csv


[tool:pytest]
testpaths = test
addopts = --cov
xfail_strict = True

[coverage:run]
branch = True
source = number-joining-game

[coverage:report]
show_missing = True
skip_covered = True

# [coverage:paths]
# source =
#    src/imppkg/ <- This will be used to replace…
#    */site-packages/my_package_name/ <- ...this, which is the venv installed package directory, ".venv/lib/python3.10/site-packages/imppkg/"

# [tox:tox]
# isolated_build = True <- Just something standard that needs to be included in order to comply with the PEP517 standard
# envlist =
#    py310
#    py39 <- Run TOX on these versions of Python

# [testenv]
# commands = pytest {posargs:tests} <- What to run when tox is run
# deps =
#    pytest <- Need to re-specify that pytest is a dependency of the tox testing system
#    pytest-cov <- Similarly with pytest-cov
